<resources>
    <string name="app_name">Bezier Levy C Curves</string>

    <!-- Common use strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="edit">Edit</string>
    <string name="add">Add Curve</string>
    <string name="remove">Remove</string>
    <string name="rnd">Rnd</string>

    <!-- Edit page strings -->
    <string name="get_color">Color</string>
    <string name="get_x">Curve X start position</string>
    <string name="get_y">Curve Y start position</string>
    <string name="get_n">Number of iterations (N)</string>
    <string name="get_rotation">Rotation</string>
    <string name="get_line_length">Line length</string>
    <string name="get_width">Width</string>

    <string name="hint_get_color">Color RGB</string>
    <string name="hint_get_x">Set starting x position</string>
    <string name="hint_get_y">Set starting y position</string>
    <string name="hint_get_n">Set a number of curve iterations</string>
    <string name="hint_get_rotation">Set rotation of the curve</string>
    <string name="hint_line_length">Set elementary line length</string>
    <string name="hint_width">Set line width</string>
    <string name="none">None</string>

    <!-- Settings -->
    <string name="main_section_title">Main Settings</string>
    <string name="main_get_color">Background Color</string>
    <string name="main_resolution">Resolution</string>
    <string name="hint_main_resolution">Number of Control Points</string>

    <string name="cp_section_title">Control Points</string>
    <string name="cp_draw">Draw Control Points</string>
    <string name="cp_get_color">Control Point Color</string>

    <string name="rnd_section_title">Randomizer</string>
    <string name="rnd_amount">Amount</string>
    <string name="hint_rnd_amount">How many curves</string>

    <!-- Curve listview row info -->
    <string name="curve_id">Id</string>
    <string name="curve_n">N</string>
    <string name="curve_rotation">Rot.</string>
    <string name="curve_x">X</string>
    <string name="curve_y">Y</string>
    <string name="curve_color">Color</string>
    <string name="curve_length">Len.</string>
    <string name="curve_width">Width</string>

</resources>