<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/add"
                android:textColor="@color/colorDarkText"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_n"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />

                <EditText
                    android:id="@+id/etvN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_get_n"
                    android:inputType="number"
                    android:textColorHint="@color/colorHintText" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_rotation"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />


                <EditText
                    android:id="@+id/etvRotation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_get_rotation"
                    android:inputType="number"
                    android:textColorHint="@color/colorHintText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_x"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />

                <EditText
                    android:id="@+id/etvX"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_get_x"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/colorHintText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_y"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />

                <EditText
                    android:id="@+id/etvY"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_get_y"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/colorHintText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_line_length"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />


                <EditText
                    android:id="@+id/etvLineLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_line_length"
                    android:inputType="number"
                    android:textColorHint="@color/colorHintText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_width"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />

                <EditText
                    android:id="@+id/etvWidth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_width"
                    android:inputType="number"
                    android:textColorHint="@color/colorHintText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/get_color"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/text_size_creation" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <EditText
                        android:id="@+id/etvColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:enabled="false"
                        android:hint="@string/hint_get_color"
                        android:maxLength="7"
                        android:textColorHint="@color/colorHintText" />

                    <ImageView
                        android:id="@+id/colorBox"
                        android:layout_width="@dimen/color_picker_box_size"
                        android:layout_height="@dimen/color_picker_box_size"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:background="@color/black" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_button"
                android:text="@string/cancel"
                android:textColor="@color/colorBrightText" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_button"
                android:text="@string/done"
                android:textColor="@color/colorBrightText" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>